[package]
authors = ["Alexander Mishunin <alexander.mishunin@gmail.com>"]
keywords = [
    "sat",
    "minisat",
]
name = "minisat-rust"
repository = "https://github.com/mishun/minisat-rust.git"
version = "0.0.1"
edition = "2018"

[dependencies]
clap = "2"
env_logger = "0.6.2"
flate2 = "1"
log = "0.4.6"
time = "0.1"
vec_map = "0.8"

[dev-dependencies]
tempfile = "3.1.0"

[profile.bench]
debug = false
lto = true
opt-level = 3

[profile.release]
debug = false
lto = true
opt-level = 3
